added initial messages override for jQuery validatior

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					</div>
 					<div class="form-row">
 						<label for="user-password">Password</label>
-						<input id="user-password" name="userPassword" class="text-input" type="password" required minlength="6" placeholder="password" />
+						<input id="user-password" name="userPassword" class="text-input" type="password" required minlength="10" pattern="\d+" placeholder="password" />
 					</div>
 					<div class="form-row">
 						<label for="user-ocupation">Ocupation</label>
