--- a/index.html
+++ b/index.html
@@ -10,10 +10,19 @@
 	<script type="text/javascript" src="js/lib/knockout-3.4.0.js"></script>
 	<script type="text/javascript" src="build/js/scripts.min.js"></script>
 
+	<link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+    <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+
 </head>
 <body>
+ 
+<script>
+
+</script>
 	<div class="content">
 		<section class="form-section" id="user-creation">
+			<div> progress <span id="progress">0%</span></div>
+			<div id="progressbar"></div>		
 			<h1>Create Your Account</h1>
 			<section>
 				<form id="user-creation-form">
@@ -30,11 +39,11 @@
 						<input id="user-password" name="userPassword" class="text-input" type="password" required minlength="10" pattern=".*\d.*" placeholder="password" />
 					</div>
 					<div class="form-row">
-						<label for="user-ocupation">Ocupation</label>
+						<label for="user-ocupation">Ocupation <span class="optional-field">(Opcional)</span> </label>
 						<input id="user-ocupation" name="userOcupation" class="text-input" type="text" placeholder="ocupation" />
 					</div>
 					<div class="form-row">
-						<label for="user-born-date">Born Date</label>
+						<label for="user-born-date">Born Date <span class="optional-field">(Opcional)</span></label>
 						<input id="user-born-date" name="userBornDate" class="text-input" type="date" />
 					</div>
 					<input class="submit" type="submit" value="Submit" />
