--- a/index.html
+++ b/index.html
@@ -15,10 +15,6 @@
 
 </head>
 <body>
- 
-<script>
-
-</script>
 	<div class="content">
 		<section class="form-section" id="user-creation">
 			<div class="progressBarContainer">
@@ -27,26 +23,26 @@
 			</div>	
 			<h1>Create Your Account</h1>
 			<section>
-				<form id="user-creation-form">
+				<form id="user-creation-form" data-bind="submit: saveUserData">
 					<div class="form-row">
 						<label for="user-name">Name</label>
-						<input class="text-input" id="user-name" name="userName" type="text" required autofocus placeholder="John Smith" autocomplete="name" />
+						<input data-bind="value: name" class="text-input" id="user-name" name="userName" type="text" required autofocus placeholder="John Smith" autocomplete="name" />
 					</div>
 					<div class="form-row">
 						<label for="user-email">Email</label>
-						<input id="user-email" name="userEmail" class="text-input" type="email" required placeholder="jsmith@gmail.com" autocomplete="email" />
+						<input data-bind="value: email" id="user-email" name="userEmail" class="text-input" type="email" required placeholder="jsmith@gmail.com" autocomplete="email" />
 					</div>
 					<div class="form-row">
 						<label for="user-password">Password</label>
-						<input id="user-password" name="userPassword" class="text-input" type="password" required minlength="10" pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?!.*\s)(?=.*[@#$%!]).*$" placeholder="password" />
+						<input data-bind="value: password" id="user-password" name="userPassword" class="text-input" type="password" required minlength="10" pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?!.*\s)(?=.*[@#$%!]).*$" placeholder="password" />
 					</div>
 					<div class="form-row">
 						<label for="user-ocupation">Ocupation <span class="optional-field">(Opcional)</span> </label>
-						<input id="user-ocupation" name="userOcupation" class="text-input" type="text" placeholder="ocupation" />
+						<input data-bind="value: ocupation" id="user-ocupation" name="userOcupation" class="text-input" type="text" placeholder="ocupation" />
 					</div>
 					<div class="form-row">
 						<label for="user-born-date">Born Date <span class="optional-field">(Opcional)</span></label>
-						<input id="user-born-date" name="userBornDate" class="text-input" type="date" />
+						<input data-bind="value: bornDate" id="user-born-date" name="userBornDate" class="text-input" type="date" />
 					</div>
 					<input class="submit" type="submit" value="Submit" />
 				</form>
