--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 	<div class="content">
 		<section class="form-section" id="user-creation">
 			<div class="progressBarContainer">
-				<div id="progress">Progress <span class="porcentage">0%</span></div>
-				<div id="progressbar"></div>	
+				<div id="user-progress" class="progress">Progress <span class="porcentage">0%</span></div>
+				<div id="user-progressbar" class="progress-bar"></div>	
 			</div>	
 			<h1>Create Your Account</h1>
 			<section>
@@ -43,6 +43,45 @@
 					<div class="form-row">
 						<label for="user-born-date">Born Date <span class="optional-field">(Opcional)</span></label>
 						<input data-bind="value: bornDate" id="user-born-date" name="userBornDate" class="text-input" type="date" />
+					</div>
+					<input class="submit" type="submit" value="Submit" />
+				</form>
+			</section>
+		</section>
+		<section class="form-section" id="event-creation">
+			<div class="progressBarContainer">
+				<div id="progress" class="progress">Progress <span class="porcentage">0%</span></div>
+				<div id="progressbar" class="progress-bar"></div>	
+			</div>	
+			<h1>Register Event</h1>
+			<section>
+				<form id="user-creation-form" data-bind="submit: saveEventData">
+					<div class="form-row">
+						<label for="event-name">Name</label>
+						<input data-bind="value: name" class="text-input" id="event-name" name="eventName" type="text" required autofocus placeholder="Your Event" autocomplete="name" />
+					</div>
+					<div class="form-row">
+						<label for="event-type">Type</label>
+						<input data-bind="value: type" id="user-email" name="eventType" class="text-input" required placeholder="Event Type" list="eventTypesList"/>
+						<datalist id="eventTypesList" data-bind="foreach: eventTypes">
+							<option data-bind="value: $data">
+						</datalist>
+					</div>
+					<div class="form-row">
+						<label for="event-host">Host</label>
+						<input data-bind="value: host" class="text-input" id="event-host" name="eventHost" type="text" required placeholder="Ex. Las Vegas" autocomplete="name" />
+					</div>
+					<div class="form-row">
+						<label for="event-start-date">Start Date</span></label>
+						<input data-bind="value: startDate" id="event-start-date" name="startDate" class="text-input" type="datetime-local" required />
+					</div>
+					<div class="form-row">
+						<label for="event-end-date">End Date</span></label>
+						<input data-bind="value: endDate" id="event-end-date" name="endDate" class="text-input" type="datetime-local" required />
+					</div>
+					<div class="form-row">
+						<label for="event-guest-list">Guest List</label>
+						<input data-bind="value: guestList" class="text-input" id="event-guest-list" name="eventHost" type="text" required placeholder="Add event participants" autocomplete="name" />
 					</div>
 					<input class="submit" type="submit" value="Submit" />
 				</form>
