added required to location field

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 					</div>
 					<div class="form-row">
 						<label for="autocomplete">Location</label>
-						<input data-bind="value: location" class="text-input" id="autocomplete" name="eventLocation" type="text" placeholder="Enter your event adress" autocomplete="name" onFocus="geolocate()"/>
+						<input data-bind="value: location" class="text-input" id="autocomplete" name="eventLocation" type="text" placeholder="Enter your event adress" autocomplete="name" onFocus="geolocate()" required />
 					</div>
 					<div class="form-row">
 						<label for="event-message">Message</label><span class="optional-field">(Opcional)</span>
