--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				<div id="user-progress" class="progress">Progress <span class="porcentage">0%</span></div>
 				<div id="user-progressbar" class="progress-bar"></div>	
 			</div>	
-			<h1>Create Your Account</h1>
+			<h1 class="main-title">Create Your Account</h1>
 			<section>
 				<form id="user-creation-form" data-bind="submit: saveUserData">
 					<div class="form-row">
@@ -56,7 +56,7 @@
 				<div id="event-progress" class="progress">Progress <span class="porcentage">0%</span></div>
 				<div id="event-progressbar" class="progress-bar"></div>	
 			</div>	
-			<h1>Register Event</h1>
+			<h1 class="main-title">Register Event</h1>
 			<section>
 				<form id="event-creation-form" data-bind="submit: saveEventData">
 					<div class="form-row">
