--- a/index.html
+++ b/index.html
@@ -15,13 +15,22 @@
 
 </head>
 <body>
-	<div class="main-content">
-<!-- 		<header>
-  			<button class="hamburger">&#9776;</button>
-		</header> -->
-		<section class="form-section" id="user-creation">
+	<div id="main" class="main-content">
+		<div class="header">
+			<div class="mobile">
+				<header data-bind="click: hamburgerClick">
+		  			<button class="hamburger">&#9776;</button>
+				</header>
+				<ul class="nav-menu" data-bind="visible: hamburgerOpen">
+					<li data-bind="click: userCreateMenuClick">Create Your Account</li>
+					<li data-bind="click: eventCreationMenuClick">Create Event</li>
+					<li data-bind="click: eventsDisplayMenuClick">Events Display</li>
+				</ul>
+			</div>
+		</div>
+		<section class="form-section" id="user-creation" data-bind="with: userCreation, visible: isUserCreation">
 			<div class="progressBarContainer">
-				<div id="user-progress" class="progress">Progress <span class="porcentage">0%</span></div>
+				<!-- <div id="user-progress" class="progress">Progress <span class="porcentage">0%</span></div> -->
 				<div id="user-progressbar" class="progress-bar"></div>	
 			</div>	
 			<h1 class="main-title">Create Your Account</h1>
@@ -51,13 +60,13 @@
 				</form>
 			</section>
 		</section>
-		<section class="form-section" id="event-creation">
+		<section class="form-section" id="event-creation" data-bind="visible: isEventCreation">
 			<div class="progressBarContainer">
-				<div id="event-progress" class="progress">Progress <span class="porcentage">0%</span></div>
+				<!-- <div id="event-progress" class="progress">Progress <span class="porcentage">0%</span></div> -->
 				<div id="event-progressbar" class="progress-bar"></div>	
 			</div>	
 			<h1 class="main-title">Register Event</h1>
-			<section>
+			<section data-bind="with: eventModel">
 				<form id="event-creation-form" data-bind="submit: saveEventData">
 					<div class="form-row">
 						<label for="event-name">Name</label>
@@ -101,28 +110,30 @@
 				</form>
 			</section>
 		</section>
-		<section id="events-display">
-			<h1 class="main-title">Events Display</h1>
+		<section id="events-display" data-bind="visible: isEventsDisplay">
+			<div data-bind="with: eventsDisplayModel">
+				<h1 class="main-title">Events Display</h1>
 
-			<ul data-bind="foreach: events" class="accordion">
-				<li class="accordion-item">
-					<h2 data-bind="text: name, click: $parent.handleAccordionItemClick($index())" class="title"></h2>
-					<div class="content" data-bind="css:{ active : $parent.activeIndex() === $index()}">
-						<div class="field-row">
-							<p class="label">Location</p>
-							<p class="value" data-bind="text: location_address"></p>	
+				<ul data-bind="foreach: events" class="accordion">
+					<li class="accordion-item">
+						<h2 data-bind="text: name, click: $parent.handleAccordionItemClick($index())" class="title"></h2>
+						<div class="content" data-bind="css:{ active : $parent.activeIndex() === $index()}">
+							<div class="field-row">
+								<p class="label">Location</p>
+								<p class="value" data-bind="text: location_address"></p>	
+							</div>
+							<div class="field-row">
+								<p class="label">Start date and time</p>
+								<p class="value" data-bind="text: startDate"></p>
+							</div>
+							<div class="field-row">
+								<p class="label">End date and time</p>
+								<p class="value" data-bind="text: endDate"></p>
+							</div>
 						</div>
-						<div class="field-row">
-							<p class="label">Start date and time</p>
-							<p class="value" data-bind="text: startDate"></p>
-						</div>
-						<div class="field-row">
-							<p class="label">End date and time</p>
-							<p class="value" data-bind="text: endDate"></p>
-						</div>
-					</div>
-				</li>
-			</ul>
+					</li>
+				</ul>
+			</div>
 		</section>
 	</div>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAjXJMvTc8gLv7uaraN1AVLafq8-6xEPyc&libraries=places&callback=initAutocomplete"  async defer></script>
