--- a/index.html
+++ b/index.html
@@ -22,24 +22,23 @@
 		  			<button class="hamburger">&#9776;</button>
 				</header>
 				<ul class="mobile nav-menu" data-bind="visible: hamburgerOpen">
-					<li data-bind="click: userCreateMenuClick">Create Your Account</li>
-					<li data-bind="click: eventCreationMenuClick">Create Event</li>
+					<li data-bind="click: userCreateMenuClick">Create Account</li>
+					<li data-bind="click: eventCreationMenuClick, visible: isAccountCreated">Create Event</li>
 					<li data-bind="click: eventsDisplayMenuClick">Events Display</li>
 				</ul>
 				<ul class="no-mobile nav-menu">
-					<li data-bind="click: userCreateMenuClick">Create Your Account</li>
-					<li data-bind="click: eventCreationMenuClick">Create Event</li>
+					<li data-bind="click: userCreateMenuClick">Create Account</li>
+					<li data-bind="click: eventCreationMenuClick, visible: isAccountCreated">Create Event</li>
 					<li data-bind="click: eventsDisplayMenuClick">Events Display</li>
 				</ul>
 			</div>
 		</div>
-		<section class="form-section" id="user-creation" data-bind="with: userCreation, visible: isUserCreation">
+		<section class="form-section" id="user-creation" data-bind="visible: isUserCreation">
 			<div class="progressBarContainer">
-				<!-- <div id="user-progress" class="progress">Progress <span class="porcentage">0%</span></div> -->
 				<div id="user-progressbar" class="progress-bar"></div>	
 			</div>	
 			<h1 class="main-title">Create Your Account</h1>
-			<section>
+			<section data-bind="with: userCreation">
 				<form id="user-creation-form" data-bind="submit: saveUserData">
 					<div class="form-row">
 						<label for="user-name">Name</label>
@@ -67,7 +66,6 @@
 		</section>
 		<section class="form-section" id="event-creation" data-bind="visible: isEventCreation">
 			<div class="progressBarContainer">
-				<!-- <div id="event-progress" class="progress">Progress <span class="porcentage">0%</span></div> -->
 				<div id="event-progressbar" class="progress-bar"></div>	
 			</div>	
 			<h1 class="main-title">Register Event</h1>
