fixing hamburger icon on mobile

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 	<div id="main" class="main-content">
 		<div class="header">
 			<div class="container">
-				<header data-bind="click: hamburgerClick">
-		  			<button class="hamburger">&#9776;</button>
+				<header class="hamburger" data-bind="click: hamburgerClick">
+		  			<!-- <button ></button> -->
 				</header>
 				<ul class="mobile nav-menu" data-bind="visible: hamburgerOpen">
 					<li data-bind="click: userCreateMenuClick">Create Account</li>
