--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
 					<li data-bind="click: eventCreationMenuClick, visible: isAccountCreated">Create Event</li>
 					<li data-bind="click: eventsDisplayMenuClick">Events Display</li>
 				</ul>
+				<div class="progressBarContainer">
+					<div data-bind="visible: isUserCreation" id="user-progressbar" class="progress-bar"></div>
+					<div data-bind="visible: isEventCreation" id="event-progressbar" class="progress-bar"></div>	
+				</div>				
 			</div>
 		</div>
 		<section class="form-section" id="user-creation" data-bind="visible: isUserCreation">
-			<div class="progressBarContainer">
-				<div id="user-progressbar" class="progress-bar"></div>	
-			</div>	
 			<h1 class="main-title">Create Your Account</h1>
 			<section data-bind="with: userCreation">
 				<form id="user-creation-form" data-bind="submit: saveUserData">
@@ -65,9 +66,6 @@
 			</section>
 		</section>
 		<section class="form-section" id="event-creation" data-bind="visible: isEventCreation">
-			<div class="progressBarContainer">
-				<div id="event-progressbar" class="progress-bar"></div>	
-			</div>	
 			<h1 class="main-title">Register Event</h1>
 			<section data-bind="with: eventModel">
 				<form id="event-creation-form" data-bind="submit: saveEventData">
