fixing focus and wrong load validation

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				<form id="user-creation-form" data-bind="submit: saveUserData">
 					<div class="form-row">
 						<label for="user-name">Name</label>
-						<input data-bind="value: name" class="text-input" id="user-name" name="userName" type="text" required autofocus placeholder="Enter your name" autocomplete="name" />
+						<input data-bind="value: name" class="text-input" id="user-name" name="userName" type="text" required placeholder="Enter your name" autocomplete="name" />
 					</div>
 					<div class="form-row">
 						<label for="user-email">Email</label>
